<resources>
    <string name="app_name">ChitFund</string>
    <string name="Reg_Page">Registration</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_an_account">Already have an account ? :</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_your_registered_email_id_to_reset_the_password">Enter Your Registered Email ID to reset the password</string>
    <string name="re_set_password">Re-Set Password</string>
    <string name="forgot_Password_heading">Forgot Password</string>
    <string name="google">google</string>
    <string name="enter_the_new_password_below">Enter the new password below</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="chit_fund_management_system">CHIT FUND MANAGEMENT SYSTEM</string>
    <string name="crud">CRUD</string>
    <string name="maths">MATHS</string>
    <string name="lists">CUSTOMERS</string>
    <string name="logout">LOGOUT</string>
    <string name="payments">PAYMENTS</string>
    <string name="close">Close</string>
    <string name="change_profile">Change Profile</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="change_Profile_Picture">Change Profile</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="total_amount_in_fund">Total amount in Fund</string>
    <string name="late_payment_charges">Late Payment charges</string>
    <string name="previous_balance">Previous Balance</string>
    <string name="previous_payments">Previous Payments</string>
    <string name="taxes">Taxes</string>
    <string name="bill_statement_for">Bill Statement for</string>
    <string name="date_from_to">Date from - to</string>
    <string name="amount_due">Amount Due</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount">Amount</string>
    <string name="title_activity_list_of_chits">ListOfChitsActivity</string>
    <string name="submit">Submit</string>
    <string name="enter_the_full_valid_phone_number">Enter the full valid phone number</string>
    <string name="email_id">Email ID</string>
    <string name="welcome_to_chit_fund_management">Welcome To Chit Fund Management</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="vineet_mishra">Vineet Mishra</string>
    <string name="uid_27839384">UID: 27839384</string>
    <string name="phone_number_9811898863">Phone Number: 9811898863</string>
    <string name="email_id_vineet1456_gmail_com">Email ID: Vineet1456@gmail.com</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="ivoices">IVOICES</string>
    <string name="customers">Customers</string>
    <string name="mainimageview">MainImageView</string>
    <string name="indiaRupeePhoto">India Rupee Photo</string>
    <string name="total_amount_for_one_month">Amount collected for one month</string>
    <string name="no_of_customers_in_the_chit">No. of customers in the Chit</string>
    <string name="select_the_month">Select the month</string>
</resources>