<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_plan"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="15dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_balance"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="45dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_payments"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="75dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="105dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/late_payment_charges"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="135dp"/>


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_in_fund"
        android:textColor="#0B0909"
        android:translationX="25dp"
        android:translationY="165dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/amountcount"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="6"
            tools:listitem="@layout/amount_bill" />

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>
