<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeProfile">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:background="@drawable/try_bg"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableEnd="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="@+id/editTextLName"
        app:layout_constraintTop_toBottomOf="@+id/editTextLName" />

    <EditText
        android:id="@+id/editTextLName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableEnd="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="@+id/editTextFName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFName" />

    <EditText
        android:id="@+id/editTextFName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableEnd="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageViewProfilePicture" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageViewProfilePicture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:elevation="15dp"
        android:padding="5dp"
        android:src="@drawable/person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:shapeAppearanceOverlay="@style/Circular" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/newbg"
        android:padding="10dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintVertical_bias="0.25"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:background="@drawable/newbg"
        android:padding="10dp"
        android:text="@string/change_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ButtonClose"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber"
        tools:ignore="DuplicateSpeakableTextCheck"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="2"/>

</androidx.constraintlayout.widget.ConstraintLayout>